--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,176 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+
+/*ヘッダー*/
+li {
+  list-style: none;
+}
+div{
+  width: auto;
+}
+img{
+  margin-bottom: 20px;
+}
+
+.header_container{
+  padding: 5px;
+  font-weight: bold;
+  color: white;
+  background-color: black;
+}
+.header_menu ul{
+	display: flex;
+	align-items:center;
+}
+
+.header_menu ul li#logo{
+  margin-right: 15px;
+}
+
+.header_menu ul li a{
+  color: white;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+}
+
+
+.header_menu ul li.menus_left a::after {
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: .3s;
+}
+.header_menu ul li.menus_left a:hover::after {
+  bottom: -4px;
+  opacity: 1;
+  visibility: visible;
+}
+
+.header_menu ul li.menus_right a:hover{
+	color:#707070;
+}
+
+
+.header_menu ul li.menus_right img:hover{
+-webkit-filter: blur(0);
+  filter: blur(0);
+  color:#707070;
+}
+
+.header_menu {
+  padding: 0px 10px;
+}
+
+
+.menus_left{
+	padding: 0 20px;
+}
+
+.header_menu ul li#menu_right_first_child{
+	margin-left: auto;
+}
+
+.header_menu ul li.menus_right{
+	padding:0 5px;
+}
+
+.header_menu ul li img{
+     -webkit-filter: invert(100%);
+     -moz-filter: invert(100%);
+     -o-filter: invert(100%);
+     -ms-filter: invert(100%);
+    filter: invert(100%);
+    margin-bottom: 0;
+
+}
+
+
+
+/*header design 終*/
+
+/*全ページ共通padding*/
+
+.page{
+  padding:15px;
+}
+
+/*devise関連*/
+
+/* /login */
+
+.login{
+  background: #e9e9e9;
+  color: #5e5e5e;
+  font: 400 87.5%/1.5em 'Open Sans', sans-serif;
+
+}
+
+.login .login_form{
+  background: #fafafa;
+  margin: 3em auto;
+  padding: 1em 1em;
+  max-width: 370px;
+  
+}
+
+.login form {
+  padding: 0 1.5em;
+}
+
+
+.login h2{
+  text-align: center;
+  padding: 1em 0;
+  font-size:17px;
+}
+
+.login .field {
+    margin-bottom: 0.75em;
+  width: 100%;
+}
+
+.login .field input {
+    background: #fafafa;
+    border: none;
+    border-bottom: 2px solid #e9e9e9;
+    color: #666;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    height: 25px;
+    transition: border-color 0.3s;
+    width: 100%;
+    margin:1em 0 0 0 ;
+}
+
+.login .actions input{
+    background: #f16272;
+    border: none;
+    border-radius: 30px;
+    color: #fff;
+    cursor: pointer;
+    height: 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: 0.05em;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background 0.3s ease-in-out;
+    width: 100%;
+}
+
+.login .shared_links{
+  padding:10px;
+  
+}
+
