--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Glober02</title>
+    <title>Glober</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
 
   <body>
@@ -15,12 +16,12 @@
 <div class="header_container">
   <div class="header_menu">
      <ul>
-      <li id="logo"><a href=""><%= image_tag("glober_logo.svg", :size =>"40x45")%></a></li>
+      <li id="logo"><a href="/"><%= image_tag("glober_logo.svg", :size =>"40x45")%></a></li>
       <li class="menus_left"><a href="/">Home</a></li>
       <li class="menus_left"><a href="">Feature</a></li>
       <li class="menus_left"><a href="">About us</a></li>
       <li class="menus_left"><a href="">Help</a></li>
-      <li class="menus_right" id="menu_right_first_child"><%=link_to("+ Create Your Own Travel Log","")%></li>
+      <li class="menus_right" id="menu_right_first_child"><%=link_to("+ Create Your Own Travel Log",new_log_entry_path)%></li>
       <li class="menus_right"><%=link_to(image_tag("search_button.svg", :size =>"28x20"),"")%></li>
       <% if user_signed_in? %>
       <li class="menus_right"><%=link_to(image_tag("notifications_button.svg", :size =>"28x20"),"")%></li>
@@ -36,10 +37,19 @@
   </div>
 </div>
 </header>
-    
+    <% if user_signed_in? && !current_user.confirmed? %>
+        <center style="padding:10px; color:white; background: #f16272;" >
+              <div class="alert">
+                    メール認証が完了していません！
+                    <%= link_to "> 再送はこちら", new_user_confirmation_path %>
+              </div>
+        </center>
+  <% end %>
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+ 
     <%= yield %>
   </body>
 </html>
