--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
       <li class="menus_right" id="menu_right_first_child"><%=link_to("+ Create Your Own Travel Log",new_log_entry_path)%></li>
       <li class="menus_right"><%=link_to(image_tag("search_button.svg", :size =>"28x20"),"")%></li>
       <% if user_signed_in? %>
-      <li class="menus_right"><%=link_to(image_tag("notifications_button.svg", :size =>"28x20"),"")%></li>
-      <li class="menus_right"><%=link_to(image_tag("user_button.svg", :size =>"28x20"),"")%></li>
+      <li class="menus_right"><%=link_to("ちんこ","")%></li>
+      <li class="menus_right"><%=link_to("manko","")%></li>
        <% else %>
       <li class="menus_right"><%= link_to "Sign up", new_user_registration_path %></li>
       <li class="menus_right"><%= link_to image_tag("facebook.svg", :size =>"28x20"), user_facebook_omniauth_authorize_path %></li>
