--- a/app/views/log_entries/index.html.erb
+++ b/app/views/log_entries/index.html.erb
@@ -9,9 +9,9 @@
       <div class="header"><%= log_entry.title  %></div>
       <div class="img"><%= image_tag("dummy-image.jpg")%></div>
       <ul id="tabMenu" class="clearfix">
-        <li><a href="#tabBox1" class="active" id="tab1">Scedule</a></li>
-        <li><a href="#tabBox2" id="tab2">What to see</a></li>
-        <li><a href="#tabBox3" id="tab3">Points</a></li>
+        <li><a href="#tabBox1" class="tabmenu active" id="tab1">Scedule</a></li>
+        <li><a href="#tabBox2" class="tabmenu" id="tab2">What to see</a></li>
+        <li><a href="#tabBox3" class="tabmenu" id="tab3">Points</a></li>
       </ul>
       <div id="tabBoxes">
         <div id="tabBox1">行動スケジュール</div>
